Display data in columns

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,7 +2,7 @@
 
 <section class="d-flex justify-content-center">
 
-    <div class="row py-3 container">
+    <div class="py-3 container">
         <% articles.forEach(function(article){ %>
             <div class="col-md-4">
                 <div class="card mb-3">
