--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,12 +1,12 @@
-body{
-    background: grey;
-}
-
-main{
-    flex:1;
+main{     
+    flex: 1 0 auto;
+    background-color: grey; 
+    min-height: 90vh;
 }
 
 footer {
+    width: 100%;
+    height: 10%;
     position: fixed;
     bottom: 0;
 }
