Reduce code, use button group

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,31 +11,20 @@
     <link rel="stylesheet" href="css/master.css">
 
   </head>
-  <body>
+  <body class="d-flex flex-column">
     <header>
         <!-- A grey horizontal navbar that becomes vertical on small screens -->
         <nav class="navbar navbar-expand bg-light align-items-center">
-
-        <!-- Links -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="login">Login</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="register">Register</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link mx-2" href="logout">Logout</a>
-          </li>
-          <li class="nav-item">
+            <div class="navbar-nav btn-group rounded" role="group" aria-label="Basic example">
+                <a class="nav-item btn btn-primary" href="login">Login</a>
+                <a class="nav-item btn btn-success mx-1" href="register">Register</a>
+                <a class="nav-item btn btn-warning" href="logout">Logout</a>
+            </div>
             <% if(!currentUser){ %>  
                 <span href="#" class="nav-link" style="color:crimson"><i class="fas fa-user"></i></span>
             <% } else { %>
                 <span href="#" class="nav-link" style="color:chartreuse"><i class="fas fa-user"></i></span>
             <% } %>
-          </li>
-        </ul>
-      
       </nav>
 
       <div class="container">
@@ -48,4 +37,4 @@
           </div>
     </header>
 
-    <main class="container flex-fill">
+    <main class="container">
