--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
     </main>
-    <footer>
-        Footer
+    <footer class="bg-light d-flex justify-content-center align-items-center">
+        <p>Chandra Kumala School &copy;</p>
     </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
