Use BS4 to improve layout

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,8 +1,8 @@
 <% include partials/header %>
 
-<section class="container">
+<section class="container d-flex flex-column mt-5">
 
-  <h1>Login</h1>
+  <h1 class="text-center">Login</h1>
 
   <form action="/login" method="post">
     <div class="form-group">
@@ -14,7 +14,7 @@
       <label for="inputPassword">Password</label>
       <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
     </div>
-    <input type="submit" class="btn btn-primary" name="" value="Login">
+    <input type="submit" class="btn btn-success float-right" name="" value="Enter">
   </form>
 
 </section>
