--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,21 +1,21 @@
 <% include partials/header %>
 
-<section class="container">
+<section class="container d-flex flex-column mt-5">
 
-  <h1>Register</h1>
+  <h1 class="text-center">Register</h1>
 
   <form action="/register" method="post">
     <div class="form-group">
-      <!-- <label for="inputUsername">Username</label> -->
+      <label for="inputUsername">Username</label>
       <input type="text" class="form-control" id="inputUsername" aria-describedby="emailHelp" placeholder="Username" name=username>
       <!-- <small id="usernameHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
     </div>
     <div class="form-group">
-      <!-- <label for="inputPassword">Password</label> -->
+      <label for="inputPassword">Password</label>
       <input type="password" class="form-control" id="inputPassword" placeholder="Password" name="password">
     </div>
 
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-success float-right">Enter</button>
   </form>
 
 </section>
