--- a/public/css/master.css
+++ b/public/css/master.css
@@ -10,3 +10,13 @@ footer {
     position: fixed;
     bottom: 0;
 }
+
+.namecard{
+    vertical-align: middle;
+    font-size: 1.5em;
+    margin: 0;
+    padding: 0;
+}
+.align-middle{
+    vertical-align: middle;
+}
