Switch off footer as it obscures data

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
     </main>
-    <footer class="bg-light d-flex justify-content-center align-items-center">
+    <!-- <footer class="bg-light d-flex justify-content-center align-items-center">
         <p>Chandra Kumala School 2019&copy;</p>
-    </footer>
+    </footer> -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
